--- a/ToDo/Base.lproj/Main.storyboard
+++ b/ToDo/Base.lproj/Main.storyboard
@@ -78,21 +78,55 @@
             </objects>
             <point key="canvasLocation" x="-178.2608695652174" y="68.973214285714278"/>
         </scene>
-        <!--Dashboard View Controller-->
-        <scene sceneID="X1N-h0-nfL">
+        <!--Item 2-->
+        <scene sceneID="2WB-bT-RyB">
             <objects>
-                <viewController storyboardIdentifier="DashboardViewController" id="r6c-VP-2cy" customClass="DashboardViewController" customModule="ToDo" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="dGr-ZB-OF3">
+                <viewController id="ajH-g7-IU8" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KoU-gd-BVD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="WfI-IQ-bjK"/>
+                        <viewLayoutGuide key="safeArea" id="jhc-Le-nIS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="LIM-Ny-HPv"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="42n-TP-Nep" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uhe-Gp-uS8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="701" y="310"/>
+            <point key="canvasLocation" x="610" y="197"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="Q4w-ko-PKU">
+            <objects>
+                <viewController id="Lfv-vp-zjk" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="00K-bv-kOX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="3ks-hp-hkX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="UtE-e4-hUV"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tEU-yj-8nk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="610" y="842"/>
+        </scene>
+        <!--Dashboard View Controller-->
+        <scene sceneID="UVv-ba-nj3">
+            <objects>
+                <tabBarController storyboardIdentifier="DashboardViewController" id="GeZ-5a-QDU" customClass="DashboardViewController" customModule="ToDo" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dKx-YE-XT6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Lfv-vp-zjk" kind="relationship" relationship="viewControllers" id="jff-rm-90N"/>
+                        <segue destination="ajH-g7-IU8" kind="relationship" relationship="viewControllers" id="7C4-oA-0Vg"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qlM-nk-rKM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="610" y="842"/>
         </scene>
     </scenes>
     <resources>
